<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_option_main">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#95000000"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/margin_30">

        <ImageView
            android:id="@+id/img_logoo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:id="@+id/layout_new_user_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_background"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_gravity="center"
            android:padding="@dimen/margin_10"
            android:minWidth="@dimen/height_200">

            <TextView
                android:id="@+id/txt_new_user_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/new_user_sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_5"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_background"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_gravity="center"
            android:padding="@dimen/margin_10"
            android:minWidth="@dimen/height_200">

            <TextView
                android:id="@+id/txt_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/font_14"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/sign_in_with_line"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/txt_sign_in_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in_with"
                android:background="@color/black"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:textSize="@dimen/font_16"
                android:textColor="@color/yellow"/>

        </RelativeLayout>





            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center"
                android:layout_marginTop="10dp"

                />







    </LinearLayout>

    <include layout="@layout/notify_alert"></include>

</RelativeLayout>
