<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#95000000"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_20"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logooo"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"/>

        <!--<ImageView-->
        <!--android:id="@+id/img_forgot_password"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/forget_pwd_text"-->
        <!--android:layout_below="@+id/img_logo"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="@dimen/margin_30"/>-->

        <TextView
            android:id="@+id/txt_for_pass_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/one_time_password"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_for_pass_logo"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_user_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/password_icon"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/edit_one_time_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:hint="@string/one_time_pass"
                    android:textSize="@dimen/font_16"
                    android:layout_toRightOf="@+id/img_user_icon"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/white"
                    android:inputType="number"
                    android:singleLine="true"/>

            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/textbox_bottom_line"
                android:layout_marginTop="@dimen/margin_10"
                android:scaleType="fitXY"/>


            <RelativeLayout
                android:id="@+id/layout_submin_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_35"
                android:background="@drawable/rounded_border_background"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_gravity="center"
                android:minWidth="@dimen/height_200">

                <TextView
                    android:id="@+id/txt_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_15"
                    android:text="@string/submit"
                    android:layout_centerInParent="true"
                    android:textColor="@color/black"/>

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:background="@color/yellow"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/layout_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/margin_15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigation_arrow"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_15"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_time_pass"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/font_18"
            android:textColor="@color/black"/>


    </RelativeLayout>

    <include layout="@layout/notify_alert"></include>


</RelativeLayout>



